--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,8 +19,7 @@ jobs:
         run: npm install
 
       - name: Install git and rsync 📚
-         run: |
-          apk update && apk add git rsync
+        run: apk update && apk add git rsync
 
       - name: Build Antora project 
         run: |
